<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/adapter_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="36dp">

        <CheckBox
            android:id="@+id/cb_bath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:text="@string/ifAfterBath"/>

        <CheckBox
            android:id="@+id/cb_snack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/cb_bath"
            android:layout_alignRight="@id/cb_bath"
            android:enabled="false"
            android:text="@string/ifMidnightSnack"/>

        <CheckBox
            android:id="@+id/cb_defecation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/cb_bath"
            android:layout_below="@id/cb_bath"
            android:enabled="false"
            android:text="@string/ifDefecation"/>

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textSize="60sp"
            android:layout_alignTop="@id/cb_snack"
            tools:text="66.6"/>

        <TextView
            android:id="@+id/weight_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tv_weight"
            android:layout_toRightOf="@id/tv_weight"
            android:text="@string/weight_unit"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="40sp"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/cb_defecation"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp"
            tools:text="2015年11月11日11点"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>